...
            android:id="@+id/title_detail_album"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_8sdp">

            <ImageView
                android:id="@+id/back_detail_album"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_48sdp"
                android:contentDescription="@string/usability_back"
                android:src="@drawable/back"/>

            <TextView
...
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/title_detail_album"
                android:background="@color/dark_gray" />

        <TextView
            android:id="@+id/title_album"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_detail_album"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginBottom="@dimen/_16sdp"
...
