<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <com.co.retrofit.app.feature.view.fragments.HeaderView
            android:id="@+id/home_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_album_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible" />

    <TextView
            android:id="@+id/tv_album_available"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/label_album_added_yet"
            android:textStyle="bold"
            android:visibility="gone" />

</LinearLayout>